# Manazir-OCR

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: integration.yml  publish.yml  python-package.yml
docustruct/: settings.py
docustruct/model/: __init__.py
